--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">StockStockyPrototype</string>
+    <string name="eight">8</string>
+    <string name="nine">9</string>
+    <string name="seven">7</string>
+    <string name="six">6</string>
+    <string name="five">5</string>
+    <string name="four">4</string>
+    <string name="three">3</string>
+    <string name="two">2</string>
+    <string name="one">1</string>
+    <string name="shift_up">↑</string>
+    <string name="shift_down">↓</string>
+    <string name="shift_left">←</string>
+    <string name="shift_right">→</string>
+    <string name="btnAdd">Add</string>
 </resources>
