Changed some code
PC reset...
Changed font size of text boxes.
Checked the working app, shows error entering data to table. Check on this tomorrow!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="fstCake">First Cake</string>
     <string name="fstRail">First SP Rail</string>
     <string name="cellar">Cellar</string>
+    <string name="btnViewAll">View All</string>
 </resources>
